# tapir-rust

./: Cargo.toml
src/: core.rs
