[package]
description = "Bindings to Tapir/LLVM's C API"
readme = "README.md"
license = "MIT"
keywords = ["bindings", "llvm", "tapir"]

name = "tapir-sys"
version = "40.0.1"
authors = [
  "William S. Moses <wmoses@mit.edu>"
]
build = "build.rs"

[features]
strict-versioning = []

[dependencies]
bitflags = "0.7"
libc = "0.2"

[build-dependencies]
gcc = "0.3"
lazy_static = "0.2.1"
regex = "0.1.77"
semver = "0.4"
